# goldenmatch-shell-company-network

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  docker-compose.openaleph.yml  justfile  pyproject.toml
configs/: goldenmatch_address.yml  goldenmatch_company.yml  goldenmatch_person.yml  sources.example.yml
data/: uk_ch_overseas_entities.parquet
docs/: HANDOFF.md  about.md  case_study_roe_noncompliance.md  data-source-utilization-roadmap.md  data-sources.md  ingestion_roadmap.md  methodology.md  phase-11-13-bridge-reach-roadmap.md  phase-11-13-specs.md  phase-14-16-roadmap.md  phase-17-bridge-disambiguation-roadmap.md  phase-8-10-post-recluster-roadmap.md  prior_art_comparison.md  roadmap.md  status.md  wrongdoing_discovery_roadmap.md  wrongdoing_precision_roadmap.md
igt_pre_publication_artefacts/: wayback_submissions.json
notebooks/: 01_case_study.html  01_case_study.ipynb  02_epstein_case_study.html  02_epstein_case_study.ipynb  _build_case_study_notebook.py  _build_epstein_case_study_notebook.py  _execute_notebook.py
posts/: liquid-funding-and-the-icij-records-public-tools-found-after-the-headlines-faded.md  sanctioned-russians-on-the-uk-psc-register-what-an-automated-join-surfaces.md
reports/: case_study.md  centrality_top.md  eval_v1_vs_v2.json  eval_v1_vs_v2.md
scripts/: _apply_remaining_labels.py  _apply_v1_dropped_labels.py  _check_schemas.py  _inspect_bods_schemas.py  _inspect_edges.py  _inspect_remote.sh  _inspect_zip.py  _railway_job.sh  (+152 more)
(+576 files in other folders)
