[project]
name = "shellnet"
version = "0.1.0"
description = "Reconcile shell-company / offshore-entity networks across public datasets using GoldenMatch."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GoldenMatch case-study authors" }]
keywords = ["entity-resolution", "offshore", "icij", "opencorporates", "gleif", "opensanctions", "goldenmatch"]

dependencies = [
    "goldenmatch>=1.12.0",
    "polars>=1.0",
    "networkx>=3.2",
    "pydantic>=2.6",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
shellnet = "shellnet.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shellnet"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# B008 is the documented Typer pattern for parameter declaration; silencing it
# project-wide rather than per-file because every script trips it.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
